--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       document.getElementById("result").innerHTML = "Loading...";
 
       // 🔥 Replace YOUR-PROJECT.vercel.app with your actual Vercel URL
-      const response = await fetch(`https://YOUR-PROJECT.vercel.app/api/hashtag?tag=${tag}`);
+      const response = await fetch(`https://yt-hashtag-analyzer.vercel.app/api/hashtag?tag=${tag}`);
       const data = await response.json();
 
       if (data.error) {
@@ -47,4 +47,5 @@
 
 </body>
 </html>
+
 
