--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       document.getElementById("result").innerHTML = "Loading...";
 
       // 🔥 Replace YOUR-PROJECT with your actual Vercel project name
-      const response = await fetch(`https://YOUR-PROJECT.vercel.app/api/hashtag?tag=${tag}`);
+      const response = await fetch(`https://yt-hashtag-analyzer.vercel.app/api/hashtag?tag=${tag}`);
       const data = await response.json();
 
       if (data.error) {
