--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
   <title>Hashtag Analyzer</title>
   <style>
-    body { font-family: Arial; padding: 20px; }
+    html, body {
+      height: 100%;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+    }
+
+    body { 
+      font-family: Arial; 
+      padding: 20px; 
+      box-sizing: border-box;
+    }
+
     input { padding: 10px; width: 250px; font-size: 16px; }
     button { padding: 10px 20px; font-size: 16px; cursor: pointer; margin-right: 5px; }
+
     #result { 
       margin-top: 20px; 
       padding: 15px; 
@@ -14,6 +27,7 @@
       line-height: 1.6;
       min-height: 50px;
     }
+
     .tag {
       display: inline-block;
       background: #f0f0f0;
@@ -22,16 +36,20 @@
       border-radius: 5px;
       font-size: 14px;
     }
+
     footer {
-      margin-top: 40px;
+      margin-top: auto; /* pushes footer to bottom */
+      text-align: center;
       font-size: 14px;
       color: #555;
-      text-align: center;
+      padding-top: 20px;
     }
+
     footer a {
       color: #0073e6;
       text-decoration: none;
     }
+
     footer a:hover {
       text-decoration: underline;
     }
@@ -51,7 +69,7 @@
     <p>
       <a href="about.html">About</a> | 
       <a href="privacy.html">Privacy</a> |
-      <a href="#" id="shareLink" aria-label="Share Hashtag Analyzer">Tell A Friend →</a>
+      <a href="#" id="shareLink">Tell A Friend →</a>
     </p>
     <p>© <span id="year"></span> | Made with 🙏🏽 by 
       <a href="https://erickouassi.com/" target="_blank">Eric</a>
@@ -59,10 +77,8 @@
   </footer>
 
 <script>
-  // Auto-update year
   document.getElementById("year").textContent = new Date().getFullYear();
 
-  // Allow Enter key to trigger analysis
   document.getElementById("tagInput").addEventListener("keypress", function(e) {
     if (e.key === "Enter") runAnalyzer();
   });
